--- a/todo/templates/todo/todolist_confirm_delete.html
+++ b/todo/templates/todo/todolist_confirm_delete.html
@@ -16,7 +16,7 @@
 
     <p class="control">
         
-      <input type="submit" class="button is-danger" value="삭제">
+      <input type="submit" class="button is-danger" value="완료">
       <a class="button is-light" href="{% url 'todo:todolist' %}">
         취소
       </a>
@@ -27,6 +27,6 @@
 <div class="field is-grouped is-grouped-centered">
     
     <p class="control">
-        해당 투두리스트를 삭제 하시겠습니까?
+        해당 투두리스트를 완료 하시겠습니까?
       </p>
   </div>
