--- a/todo/templates/todo/todolist_list.html
+++ b/todo/templates/todo/todolist_list.html
@@ -112,21 +112,24 @@
     <!-- ***** Breadcumb Area End ***** -->
 
     <!-- ***** About Us Area Start ***** -->
+    {% block content %}
     <div class="col-sm-3" style="text-align:center;">
       <a href="{% url 'todo:todolist_create' %}">
-        <button class="button is-info is-rounded is-fullwidth">할일 추가하기</button>
+        
+        <button type="button" class="btn btn-outline-primary btn-lg">할일 추가하기</button>
       </a>
     </div>
     <div class="container">
-      <div class="row">
-        <div class="col-6">
+      <div class="column">
+        
           <p>todolist</p>
           <div class="card">
-            <div class="card-header">
-              My todolist
+            
             </div>
             
-            <div class="card row">
+            <div class="columns">
+            {% for todo in to_do_list %}
+            <div class="card column">
               <header class="card-header">
                 <p class="card-header-title">
                   할일 : {{ todo.name }}
@@ -143,13 +146,24 @@
                     남은 일수 : {{ todo.remaining_days }}
                   </div>
                 </div>
+                <footer class="card-footer">
+                  <a href="{% url 'todo:todolist_detail' todo.id %}" class="card-footer-item"><button 
+                    type="button" class="btn btn-outline-info">더보기</button>
+                  <a href="{% url 'todo:todolist_update' todo.id %}" class="card-footer-item"><button 
+                    type="button" class="btn btn-outline-warning">수정하기</button>
+                  <a href="{% url 'todo:todolist_delete' todo.id %}" class="card-footer-item"><button 
+                    type="button" class="btn btn-outline-success">완료</button>
+                </footer>
+              </div>
+                {% endfor %}
               </div>
              
             </div>
             </div>
           </div>
         </div>
-        
+      
+      {% endblock content %}
     
     <!-- ***** About Us Area End ***** -->
 
