--- a/app/templates/voca.html
+++ b/app/templates/voca.html
@@ -1,23 +1,130 @@
-<body>
-    <center>
-        <br>
-        <h1>단어장예시</h1>
+{% load static %}
+<html>
 
-        <form action="{%url 'search'%}" method="get">
-            <input type="text" name="search">
+<style>
+    @font-face {
+        font-family: 'ghanachoco';
+        src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_20-04@1.0/ghanachoco.woff') format('woff');
+        font-weight: normal;
+        font-style: normal;
+    }
+
+    @font-face {
+        font-family: 'Handon3gyeopsal600g';
+        src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_seven@1.2/Handon3gyeopsal600g.woff') format('woff');
+        font-weight: normal;
+        font-style: normal;
+    }
+
+    .ghanachoco-font {
+        font-family: 'ghanachoco', sans-serif;
+        color: black;
+    }
+
+    .Handon3gyeopsal600g-font {
+        font-family: 'Handon3gyeopsal600g', sans-serif;
+        color: black;
+    }
+
+       .half-highlight {
+  background: linear-gradient(180deg,rgba(255,255,255,0) 50%, #FFD0AE 50%);
+}
+    .spread-underline {
+  color: #333;
+  text-decoration: none;
+  display: inline-block;
+  padding: 15px 0;
+  position: relative;
+}
+.spread-underline:after {    
+  background: none repeat scroll 0 0 transparent;
+  bottom: 0;
+  content: "";
+  display: block;
+  height: 2px;
+  left: 50%;
+  position: absolute;
+  background: #ffb000;
+  transition: width 0.3s ease 0s, left 0.3s ease 0s;
+  width: 0;
+}
+.spread-underline:hover:after { 
+  width: 100%; 
+  left: 0; 
+}
+</style>
+
+    <head>
+      <title>전문 단어</title>
+      <meta charset="utf-8" />
+      <meta name="viewport" content="width=device-width, initial-scale=1" />
+      <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
+        crossorigin="anonymous"></script>
+      <link rel="stylesheet" href="{% static 'css/main.css' %}">
+          <style type="text/css"> 
+a { text-decoration:none } 
+</style> 
+   </head>
+   
+<body>
+
+   <div class="fixed-top Handon3gyeopsal600g-font">
+  <div class="collapse" id="navbarToggleExternalContent">
+    <div class="bg-dark p-4" style="color: white;">
+    {%if user.is_authenticated%}
+      <h5 class="text-white h3" >{{user.profile.nickname}}님 반갑습니다!</h5>
+      <span class="text-muted">
+      <form>ㅤ
+                <a href="{%url 'user_profile'%}" style="color: white;">내정보 </a>
+                <a href="{%url 'ranking'%}" style="color: white;">ㅤㅤ현재 순위ㅤ</a>
+                {%csrf_token%}
+                <form action="{%url 'logout'%}" method="POST" >
+                    <input type="submit" value="로그아웃" style="font-size: 0.8rem;">
+                </form>
+                {%else%}
+                <a href="{%url 'signup'%}">회원가입</a>
+                <a href="{%url 'login'%}">로그인</a>
+                {%endif%}
+                </form>
+                </span>
+    </div>
+  </div>
+  <nav class="navbar navbar-dark bg-light" ">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <a class="nav-link spread-underline" href="{%url 'voca_cate'%}" style="color:black; font-size:1.1rem;">단어장</a>
+    <a class="nav-link spread-underline" href="{%url 'voca_test'%}" style="color:black; font-size:1.1rem;">단어테스트</a>
+    <a class="nav-link spread-underline" href="{%url 'listen'%}" style="color:black; font-size:1.1rem;">영어듣기</a>
+    <a class="nav-link spread-underline" href="{%url 'pronounce'%}" style="color:black; font-size:1.1rem;">발음연습</a>
+    <a class="nav-link spread-underline" href="{%url 'chatbot'%}" style="color:black; font-size:1.1rem;">챗봇</a>
+    <a class="nav-link spread-underline" href="{%url 'write'%}" style="color:black; font-size:1.1rem;">손글씨 쓰기</a>
+    <a class="nav-link spread-underline" href="{%url 'todo:todolist'%}" style="color:black; font-size:1.1rem;">투두리스트</a>
+  </nav>
+</div>
+   
+    <center>
+         <br><br><br><br>
+        <h1 class="ghanachoco-font" style= "font-size:3.5rem;">전체단어</h1>
+
+        <form action="{%url 'search'%}" method="get" >
+            <input type=" text" name="search">
             <input type="submit" value="검색">
         </form>
+
     </center>
+  
     <div>
-        <div style="float: right;">
-            <form action="{%url 'index'%}">
-                <button>홈으로 돌아가기</button>
-            </form>
-        </div>
-        <div style="margin-left: 2em;">
+        <div style="margin-left: 15em; margin-right:15em;" >
             {%for v in vocas%}
-            <p style="margin-right: 5em;">{{v.grade}}</p>
-            <p style="font-size: 1.8rem;">{{v.word}} {{v.mean}}</p>
+            <p class= Handon3gyeopsal600g-font style="margin-right: 5em;">{{v.grade}}</p>
+            <p class= Handon3gyeopsal600g-font style="font-size: 1.8rem;">{{v.word}} {{v.mean}}</p>
             <hr>
             {%endfor%}
         </div>
@@ -26,19 +133,38 @@
     <center>
         <div>
             {% if vocas.has_previous %}
-            <a href="?page=1">맨앞으로</a>
-            <a href="?page={{vocas.previous_page_number}}">이전으로</a>
+            <a class= Handon3gyeopsal600g-font style="color:ORANGE;" href="?page=1">맨앞으로</a>
+            <a class= Handon3gyeopsal600g-font style="color:ORANGE;" href="?page={{vocas.previous_page_number}}">이전으로</a>
             {% endif %}
             <span>{{vocas.number}}</span>
             <span>/</span>
             <span>{{vocas.paginator.num_pages}}</span>
             {%if vocas.has_next%}
-            <a href="?page={{vocas.next_page_number}}">다음으로</a>
-            <a href="?page={{vocas.paginator.num_pages}}">맨뒤로</a>
+            <a class= Handon3gyeopsal600g-font style="color:ORANGE;" href="?page={{vocas.next_page_number}}">다음으로</a>
+            <a class= Handon3gyeopsal600g-font style="color:ORANGE;" href="?page={{vocas.paginator.num_pages}}">맨뒤로</a>
             {%endif%}
         </div>
     </center>
 
-    <br>
+    <footer id="footer">
+        <div class="inner">
+            <div class="flex">
+                <div class="copyright">
+                    &copy; Untitled. Design: <a href="https://templated.co">TEMPLATED</a>. Images: <a href="https://unsplash.com">Unsplash</a>.
+                </div>
+                <ul class="icons">
+                    <li> <a href="http://cse.yu.ac.kr/main.php"><img src="{% static 'img/yu.png' %}" width="200px;"></a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </footer>
 
+<!-- Scripts -->
+    <script src="../static/js/jquery.min.js"></script>
+    <script src="../static/js/skel.min.js"></script>
+    <script src="../static/js/util.js"></script>
+    <script src="../static/js/main.js"></script>
 </body>
+</html>
+
