--- a/todo/templates/todo/todolist_list.html
+++ b/todo/templates/todo/todolist_list.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 
 <head>
     <meta charset="UTF-8">
@@ -53,11 +53,11 @@
                                             data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Pages</a>
                                         <div class="dropdown-menu" aria-labelledby="moshDropdown">
                                             <a class="dropdown-item" href="index.html">Home</a>
-                                            <a class="dropdown-item" href="about.html">About Us</a>
-                                            <a class="dropdown-item" href="services.html">Services</a>
-                                            <a class="dropdown-item" href="portfolio.html">Portfolio</a>
-                                            <a class="dropdown-item" href="blog.html">Blog</a>
-                                            <a class="dropdown-item" href="contact.html">Contact</a>
+                                            <a class="dropdown-item" href="about.html">단어장</a>
+                                            <a class="dropdown-item" href="services.html">단어테스트</a>
+                                            <a class="dropdown-item" href="portfolio.html">영어듣기</a>
+                                            <a class="dropdown-item" href="blog.html">발음연습</a>
+                                            <a class="dropdown-item" href="contact.html">챗봇</a>
                                             <div class="dropdown-divider"></div>
                                             <a class="dropdown-item" href="elements.html">Elements</a>
                                         </div>
@@ -161,7 +161,7 @@
             </div>
             </div>
           </div>
-        </div>
+        
       
       {% endblock content %}
     
