--- a/app/templates/voca.html
+++ b/app/templates/voca.html
@@ -55,7 +55,7 @@
 </style>
 
     <head>
-      <title>전문 단어</title>
+      <title>전체 단어</title>
       <meta charset="utf-8" />
       <meta name="viewport" content="width=device-width, initial-scale=1" />
       <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
