--- a/app/templates/voca_test.html
+++ b/app/templates/voca_test.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE HTML>
 <!--
 	Theory by TEMPLATED
@@ -57,11 +58,11 @@
 			<section id="three" class="wrapper">
 				<div class="inner">
 					<header class="align-center">
-						<h2 class="ghanachoco-font">단어 테스트</h2>
+						<h2 class="ghanachoco-font" style="font-size: 3.5rem;">단어 테스트</h2>
 						<p>마 단어 공부했나?? 테스트 함 볼겨?????</p>
 					</header>
-                    <center>
-                    {{vocas_test.word}}
+                    <center style=" border-style : solid; border-width : 15px; border-color: rgba(0, 67, 255, 0.33);">
+					<h2 style="font-weight: bolder; margin-top: 20px; "><strong>{{vocas_test.word}}</strong></h2>
                     <form action="{%url 'test_result'%}" method="get" >
                         <input type="hidden" value="{{vocas_test.mean}}" name="mean"></input>
                         <input type=" text" name="test_word">
@@ -71,23 +72,22 @@
 				</div>
 			</section>
 
-		<!-- Footer -->
-			<footer id="footer">
-				<div class="inner">
-					<div class="flex">
-						<div class="copyright">
-							&copy; Untitled. Design: <a href="https://templated.co">TEMPLATED</a>. Images: <a href="https://unsplash.com">Unsplash</a>.
-						</div>
-						<ul class="icons">
-							<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-							<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="#" class="icon fa-linkedin"><span class="label">linkedIn</span></a></li>
-							<li><a href="#" class="icon fa-pinterest-p"><span class="label">Pinterest</span></a></li>
-							<li><a href="#" class="icon fa-vimeo"><span class="label">Vimeo</span></a></li>
-						</ul>
-					</div>
-				</div>
-			</footer>
+
+    <!-- Footer -->
+    <footer id="footer">
+        <div class="inner">
+            <div class="flex">
+                <div class="copyright">
+                    &copy; Untitled. Design: <a href="https://templated.co">TEMPLATED</a>. Images: <a
+                        href="https://unsplash.com">Unsplash</a>.
+                </div>
+                <ul class="icons">
+                    <li> <a href="http://cse.yu.ac.kr/main.php"><img src="{% static 'img/yu.png' %}" width="200px;"></a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </footer>
 
 		<!-- Scripts -->
 			<script src="../static/js/jquery.min.js"></script>
