--- a/app/templates/voca_test.html
+++ b/app/templates/voca_test.html
@@ -42,17 +42,63 @@
 	<body class="subpage">
 
 		<!-- Header -->
-			<header id="header">
-				<div class="inner">
-					<a href="index.html" class="logo">Home</a>
-					<nav id="nav">
-						<a href="index.html">Home</a>
-						<a href="generic.html">Generic</a>
-						<a href="elements.html">Elements</a>
-					</nav>
-					<a href="#navPanel" class="navPanelToggle"><span class="fa fa-bars"></span></a>
-				</div>
-			</header>
+
+		<head>
+			<title>머핀의 법칙 - AI 기반 영어 교육</title>
+			<meta charset="utf-8" />
+			<meta name="viewport" content="width=device-width, initial-scale=1" />
+			<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+				integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+			<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+				integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+				crossorigin="anonymous"></script>
+			<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
+				integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
+				crossorigin="anonymous"></script>
+			<link rel="stylesheet" href="{% static 'css/main.css' %}" />
+			<style type="text/css"> 
+		a { text-decoration:none } 
+		</style> 
+		
+		</head>
+		
+		<body>
+		<div class="fixed-top Handon3gyeopsal600g-font">
+		  <div class="collapse" id="navbarToggleExternalContent">
+			<div class="bg-dark p-4" style="color: white;">
+			{%if user.is_authenticated%}
+			  <h5 class="text-white h3" >{{user.profile.nickname}}님 반갑습니다!</h5>
+			  <span class="text-muted">
+			  <form>ㅤ
+						<a href="{%url 'user_profile'%}" style="color: white;">내정보 </a>
+						<a href="{%url 'ranking'%}" style="color: white;">ㅤㅤ현재 순위ㅤ</a>
+						{%csrf_token%}
+						<form action="{%url 'logout'%}" method="POST" >
+							<input type="submit" value="로그아웃" style="font-size: 0.8rem;">
+						</form>
+						{%else%}
+						<a href="{%url 'signup'%}">회원가입</a>
+						<a href="{%url 'login'%}">로그인</a>
+						{%endif%}
+						</form>
+						</span>
+			</div>
+		  </div>
+		  <nav class="navbar navbar-dark bg-light" ">
+			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
+			  <span class="navbar-toggler-icon"></span>
+			</button>
+			<a class="nav-link spread-underline" href="{%url 'voca_cate'%}" style="color:black; font-size:1.1rem;">단어장</a>
+			<a class="nav-link spread-underline" href="{%url 'voca_test'%}" style="color:black; font-size:1.1rem;">단어테스트</a>
+			<a class="nav-link spread-underline" href="{%url 'listen'%}" style="color:black; font-size:1.1rem;">영어듣기</a>
+			<a class="nav-link spread-underline" href="{%url 'pronounce'%}" style="color:black; font-size:1.1rem;">발음연습</a>
+			<a class="nav-link spread-underline" href="{%url 'chatbot'%}" style="color:black; font-size:1.1rem;">챗봇</a>
+			<a class="nav-link spread-underline" href="{%url 'write'%}" style="color:black; font-size:1.1rem;">손글씨 쓰기</a>
+			<a class="nav-link spread-underline" href="{%url 'todo:todolist'%}" style="color:black; font-size:1.1rem;">투두리스트</a>
+		  </nav>
+		</div>
+
+
 
 		<!-- Three -->
 			<section id="three" class="wrapper">
