--- a/app/templates/test_result.html
+++ b/app/templates/test_result.html
@@ -23,78 +23,7 @@
 </head>
 
 <body>
-    <!-- ***** Preloader Start ***** -->
-    <div id="preloader">
-        <div class="mosh-preloader"></div>
-    </div>
-
-    <!-- ***** Header Area Start ***** -->
-    <header class="header_area">
-        <div class="container-fluid h-100">
-            <div class="row h-100">
-                <!-- Menu Area Start -->
-                <div class="col-12 h-100">
-                    <div class="menu_area h-100">
-                        <nav class="navbar h-100 navbar-expand-lg align-items-center">
-                            <!-- Logo -->
-                            <a class="navbar-brand" href="index.html"><img src="../static/img/core-img/logo.png"
-                                    alt="logo"></a>
-
-                            <!-- Menu Area -->
-                            <button class="navbar-toggler" type="button" data-toggle="collapse"
-                                data-target="#mosh-navbar" aria-controls="mosh-navbar" aria-expanded="false"
-                                aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
-
-                            <div class="collapse navbar-collapse justify-content-end" id="mosh-navbar">
-                                <ul class="navbar-nav animated" id="nav">
-                                    <li class="nav-item active"><a class="nav-link" href="index.html">Home</a></li>
-                                    <li class="nav-item dropdown">
-                                        <a class="nav-link dropdown-toggle" href="#" id="moshDropdown" role="button"
-                                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Pages</a>
-                                        <div class="dropdown-menu" aria-labelledby="moshDropdown">
-                                            <a class="dropdown-item" href="index.html">Home</a>
-                                            <a class="dropdown-item" href="about.html">About Us</a>
-                                            <a class="dropdown-item" href="services.html">Services</a>
-                                            <a class="dropdown-item" href="portfolio.html">Portfolio</a>
-                                            <a class="dropdown-item" href="blog.html">Blog</a>
-                                            <a class="dropdown-item" href="contact.html">Contact</a>
-                                            <div class="dropdown-divider"></div>
-                                            <a class="dropdown-item" href="elements.html">Elements</a>
-                                        </div>
-                                    </li>
-                                    <li class="nav-item"><a class="nav-link" href="about.html">About Us</a></li>
-                                    <li class="nav-item"><a class="nav-link" href="services.html">Services</a></li>
-                                    <li class="nav-item"><a class="nav-link" href="portfolio.html">Portfolio</a></li>
-                                    <li class="nav-item"><a class="nav-link" href="blog.html">Blog</a></li>
-                                    <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
-                                </ul>
-                                <!-- Search Form Area Start -->
-                                <div class="search-form-area animated">
-                                    <form action="#" method="post">
-                                        <input type="search" name="search" id="search"
-                                            placeholder="Type keywords &amp; hit enter">
-                                        <button type="submit" class="d-none"><img
-                                                src="../static/img/core-img/search-icon.png" alt="Search"></button>
-                                    </form>
-                                </div>
-                                <!-- Search btn -->
-                                <div class="search-button">
-                                    <a href="#" id="search-btn"><img src="../static/img/core-img/search-icon.png"
-                                            alt="Search"></a>
-                                </div>
-                                <!-- Login/Register btn -->
-                                <div class="login-register-btn">
-                                    <a href="#">Login</a>
-                                    <a href="#">/ Register</a>
-                                </div>
-                            </div>
-                        </nav>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </header>
-    <!-- ***** Header Area End ***** -->
+    
 
     <!-- ***** Breadcumb Area Start ***** -->
     <div class="mosh-breadcumb-area" style="background-image: url(../static/img/core-img/choco_3.png);">
@@ -124,12 +53,11 @@
                             <h3>정답: {{mean}}</h3>
                             {%endif%}
                             <form action="{%url 'voca_test'%}">
-                                <button>다음 단어로</button>
+                                <button class="btn mosh-btn mt-50">다음 단어로</button>
                             </form>
 
-                            <form action="{%url 'index'%}">
-                                <button>단어테스트 마치기</button>
-                            </form> <a href="#" class="btn mosh-btn mt-50">Read More</a>
+                            <form action="{%url 'a'%}">
+                                <button class="btn mosh-btn mt-50">단어테스트 마치기</button>
                         </div>
                     </div>
 
