--- a/todo/templates/todo/todolist_list.html
+++ b/todo/templates/todo/todolist_list.html
@@ -1,3 +1,4 @@
+
 {% load static %}
 <style>
     
@@ -39,52 +40,63 @@
         </header>   
     <center>
       {% block content %}
-      <div class="box has-text-centered">
-        <a href="{% url 'todo:todolist_create' %}">
-          <button class="button is-info is-rounded is-fullwidth">할일 추가하기</button>
-        </a>
-      </div>
-      
-      <div class="rows">
-        {% for todo in to_do_list %}
-      
-        <div class="card row">
-          <header class="card-header">
-            <p class="card-header-title">
-              할일 : {{ todo.name }}
-            </p>
-            <a href="#" class="card-header-icon" aria-label="more options">
-              <span class="icon">
-                <i class="fas fa-angle-down" aria-hidden="true"></i>
-              </span>
-            </a>
-          </header>
-          <div class="card-content">
-            <div class="content">
-              해야 할일 : {{ todo.description|truncatechars:30 }}
+    <div class="col-sm-3" style="text-align:center;">
+      <a href="{% url 'todo:todolist_create' %}">
+        
+        <button type="button" class="btn btn-outline-primary btn-lg">할일 추가하기</button>
+      </a>
+    </div>
+    <div class="container">
+      <div class="column">
+        
+          
+          <div class="card">
+            
+            </div>
+            
+            <div class="columns">
+            {% for todo in to_do_list %}
+            <div class="card column">
+              <header class="card-header">
+                <p class="card-header-title">
+                  할일 : {{ todo.name }}
+                </p>
+                <div class="card-content">
+                  <div class="content">
+                    해야 할일 : {{ todo.description|truncatechars:30 }}
+                    <br>
+                    <hr>
+                    생성 날짜 : {{ todo.date_created }}
+                    <br>
+                    데드 라인 : {{ todo.date_deadline }}
+                    <hr>
+                    남은 일수 : {{ todo.remaining_days }}
+                  </div>
+                </div>
+                <br>
+                <footer class="card-footer">
+                  <a href="{% url 'todo:todolist_detail' todo.id %}" class="card-footer-item"><button 
+                    type="button" class="btn btn-outline-info">더보기</button>
+                  <a href="{% url 'todo:todolist_update' todo.id %}" class="card-footer-item"><button 
+                    type="button" class="btn btn-outline-warning">수정하기</button>
+                  <a href="{% url 'todo:todolist_delete' todo.id %}" class="card-footer-item"><button 
+                    type="button" class="btn btn-outline-success">완료</button>
+                </footer>
+              </div>
               <br>
-              <hr>
-              생성 날짜 : {{ todo.date_created }}
-              <br>
-              데드 라인 : {{ todo.date_deadline }}
-              <hr>
-              남은 일수 : {{ todo.remaining_days }}
+                {% endfor %}
+              </div>
+             
+            </div>
             </div>
           </div>
-          <footer class="card-footer">
-            <a href="{% url 'todo:todolist_detail' todo.id %}" class="card-footer-item"><button
-                class="button is-primary is-fullwidth">더보기</button></a>
-            <a href="{% url 'todo:todolist_update' todo.id %}" class="card-footer-item"><button
-                class="button is-warning is-fullwidth">수정하기</button></a>
-            <a href="{% url 'todo:todolist_delete' todo.id %}" class="card-footer-item"><button
-                class="button is-danger is-fullwidth">완료</button></a>
-          </footer>
-        </div>
+        
       
-        {% endfor %}
-      
-      </div>
       {% endblock content %}
+
+      
+
+     
 
 
 
