--- a/app/templates/pronounce.html
+++ b/app/templates/pronounce.html
@@ -7,7 +7,6 @@
     <link href="../static/css/record.css?after" rel="stylesheet" type="text/css">
   </head>
   <body>
-
     <div class="wrapper">
 
       <header>
@@ -38,8 +37,9 @@
 
       <p>Icon courtesy of <a href="http://findicons.com/search/microphone">Find Icons</a>. Thanks to <a href="http://soledadpenades.com/">Sole</a> for the Oscilloscope code!</p>
     </aside>
+    {% csrf_token %}
+    <script>const csrftoken = document.querySelector('[name=csrfmiddlewaretoken]').value;</script>
+    <script src="http://code.jquery.com/jquery-latest.js"></script>
     <script src="../static/js/record.js?after"></script>
-    <script src="require.js"></script>
-
   </body>
 </html>
