--- a/todo/templates/todo/create.html
+++ b/todo/templates/todo/create.html
@@ -69,10 +69,14 @@ $( function() {
 
     <div class="field is-grouped is-grouped-centered" style="margin-top: 30px;">
         <div class="control">
-          <button class="button is-link">추가</button>
+          <button class="button is-link">추가</button> 
+          <!-- <button class="button is-link is-inverted">추가</button> -->
         </div>
         <div class="control">
-          <button class="button is-danger is-light">취소</button>
+          
+          <!-- <button class="button is-danger is-light">취소</button> -->
+          <a href="{{request.META.HTTP_REFERER}}">취소</a>
+          
         </div>
       </div>
 </form> 
